infra/k8s/taskmateauth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskmateauth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskmateauth
  template:
    metadata:
      labels:
        app: taskmateauth
    spec:
      containers:
        - name: taskauth
          image: ugoezeh/taskmateauth:latest
          resources:
            limits:
              memory: '128Mi'
              cpu: '200m'
---
apiVersion: v1
kind: Service
metadata:
  name: taskmateauth-srv
  labels:
    app: taskmateauth
spec:
  selector:
    app: taskmateauth
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
