infra/k8s/taskmatemanager-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskmatemanager-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskmatemanager
  template:
    metadata:
      labels:
        app: taskmatemanager
    spec:
      containers:
        - name: taskmatemanager
          image: ugoezeh/taskmatemanager:latest
          resources:
            limits:
              memory: '128Mi'
              cpu: '200m'
---
apiVersion: v1
kind: Service
metadata:
  name: taskmatemanager-srv
  labels:
    app: taskmatemanager
spec:
  selector:
    app: taskmatemanager
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
