infra/k8s/taskmatequery-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskmatequery-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskmatequery
  template:
    metadata:
      labels:
        app: taskmatequery
    spec:
      containers:
        - name: taskmatequery
          image: ugoezeh/taskmatequery:latest
          resources:
            requests:
              cpu: '100m'
              memory: '256Mi'
            limits:
              cpu: '500m'
              memory: '512Mi'
---
apiVersion: v1
kind: Service
metadata:
  name: taskmatequery-srv
  labels:
    app: taskmatequery
spec:
  selector:
    app: taskmatequery
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
